--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -83,6 +83,9 @@ body {
 }
 
 body {
+    background-color: #344E41;
+    font-family: Raleway, Arial, sans-serif;
+    font-size: 22px;
     margin: 0;
     padding: 0;
 }
@@ -96,6 +99,7 @@ h2 {
 }
 
 nav a {
+    color:#344E41;
     padding: 35px;
 }
 
@@ -111,6 +115,12 @@ footer {
 
 .book,
 .join {
+    background-color: #d9c2a3;
+    color: rgb(0, 51, 0);
+    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
     border-radius: 5px;
 }
 
